Update DeleteProperty.java